css/pech.css
body{
	min-height:100%;
}
input,body,button{
	font-size:16px;
	font-family:'liberation_serif',serif;
}
.b{
	min-width:3em;
	overflow:hidden;
	padding-left: 0.1em;
	padding-right: 0.1em;
	font-weight:700;
	margin-bottom:3px;
	margin-left:3px;
	border:solid 1px;
	text-align:center;
	float:left;
	position:relative;
	min-height:1.2em;
}
.d{
	min-width:90%;
	padding-right:1em;
	font-family:auto;
	overflow:hidden;
	background-color:white;
	margin-bottom:1em;
}
.z{
	padding-left:0.4em;
	overflow: hidden;
}
.z>*{
	float:none !important;
}
.z>canvas{
	float:right !important;
}
div.d{
	page-break-inside:avoid;
}
.d2{
	width:100%;
	overflow:hidden;
	page-break-before:always;
	height:1px;

}
.d3{
	width:100%;
	float:left;
}
.d4{
	width:100%;
}
.kolvo{
	width:40px;
	margin-right:10px;
	margin-left:10px;

}
.pba{
	page-break-after:always;
	visibility:hidden;
}
.pbb{
	page-break-before:always;
	visibility:hidden;
	min-width:90%;
}
#rez tr{
	page-break-inside:avoid;
}
#rez tr td{
	vertical-align:top;
}
em{
	margin-right:0.5em;
}
.bezramok{
	border:0px;
}
#gotov{
	position:fixed;
	top:0px;
	right:0px;
	margin:15px;
	float:right;
	overflow:hidden;
	vertical-align:middle;
	border-radius:1em;
	opacity:0.85;
	background-color:#e8f0f0;
	z-index:99997;
	padding:1.1em;
	height:3.5em;
	font-weight:700;
}
#pr0,#pr1{
	height:1.4em;
	overflow:hidden;
	vertical-align:middle;
	opacity:1;
}
#pr0{
	width:16em;
	background-color:#ccc;
}
#pr1{
	width:0;
	background-color:#00c;
	position:relative;
	top:-1.4em;
}
#t0{
	color: #00c;
}
#t1{
	color: #ccc;
}
.tx{
	margin-left:7.3em;
	vertical-align:middle;
	height:100%;
	padding-top:0.1em;
	padding-bottom:0.1em;
}
#vrem{
	text-align:center;
}
.tablpech{
	float:left;
	margin:1em;
}

#prov_knopki{
	border-radius: 2.5em;
	background-color:pink;
	margin-left:5%;
	margin-right:5%;
	padding:1em;
	float:right;
}
.r{
	width: 800px;
	text-align: right;
	clear:both;
}
.otv_ver{
	display:none;
	color:#090;
}
.otv_nev{
	display:none;
	color:#900;
}
.spoiler-show, .spoiler-hide{
	margin-top:50px;
}
#rez{
	margin-left:auto;
	margin-right:auto;
}
#otv{
	width: 100%;
	padding-right: 0;
}
.resh-poln{
	display:none;
}
#dopoln{
	display:none;
}
h2{
	float:none;
	clear:both;
}

button.renewbutton{
	display:block;
	right:0;
}

.grid-for-writing {
	/*
	background:
		repeating-linear-gradient( 0deg, transparent 0 0.5cm, gray 0.5cm 0.52cm),
		repeating-linear-gradient(90deg, transparent 0 0.5cm, gray 0.5cm 0.52cm);
	*/
	width: 100%;
	min-height: 10cm;
	border: 2px solid gray;
	border-radius:14.68px;
	margin-top: 15px;
	margin-bottom: 15px;
	display: none;
}

